# comics_backend

./: .gitignore  AGENTS.md  Dockerfile.ci  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.json  tmp_sys.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5e2d3c65bc2f_create_library_tables.py
app/: __init__.py  cache.py  db.py  jobs.py  schemas.py  storage.py
app/routers/: __init__.py  jobs.py  library.py
data/: clz_export.csv  clz_inventory.csv
database/: __init__.py  build_library.py
db/: build_library.py
scripts/: install_docker.sh  load_test.py  run_load_test.py
tests/: test_main.py  test_storage.py
tests/db/: test_build_library.py
