[project]
name = "comics-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "fastapi>=0.124.0",
    "pandas>=2.3.3",
    "pdbpp>=0.11.7",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.380",
    "ruff>=0.14.8",
]
[tool.pytest.ini_options]
pythonpath = [
  ".",         # project root
  "comics_backend",
]
